# FactoryTesting

./: .gitignore  FactoryTesting.sln  bulk_add_cfg_false.ps1  check_output.json  修复总结.md  数据库迁移修复总结.md  界面优化和智能分配修复总结.md
FactoryTesting/src-tauri/: .taurignore  Cargo.toml  build.rs  check_db.sql  factory_testing_data.sqlite  output.txt  tauri.conf.json
FactoryTesting/src-tauri/.cargo/: config.toml
FactoryTesting/src-tauri/data/: factory_testing_data.sqlite
FactoryTesting/src-tauri/src/: commands.rs  database_migration.rs  error.rs  lib.rs  lib_original.rs  libcreate_db.rlib  libinitialize_database_complete.rlib  libnoop_services.rlib  main.rs  services.rs  tauri_commands.rs
FactoryTesting/src-tauri/src/application/: mod.rs
FactoryTesting/src-tauri/src/application/services/: batch_allocation_service.rs  channel_allocation_service.rs  data_import_service.rs  mod.rs  range_setting_service.rs  report_generation_service.rs  test_coordination_service.rs
FactoryTesting/src-tauri/src/commands/: channel_allocation_commands.rs  data_management.rs  manual_test_commands.rs  manual_testing.rs  mod.rs  test_plc_config.rs
FactoryTesting/src-tauri/src/domain/: mod.rs
FactoryTesting/src-tauri/src/domain/impls/: channel_state_manager.rs  mod.rs  noop_services.rs  plc_connection_manager.rs  real_batch_allocation_service.rs  real_test_orchestration_service.rs  specific_test_executors.rs  stub_batch_allocation_service.rs  stub_test_orchestration_service.rs  test_execution_engine.rs  test_plc_config_service.rs
FactoryTesting/src-tauri/src/domain/services/: batch_allocation_service.rs  channel_state_manager.rs  event_publisher.rs  mod.rs  persistence_service.rs  plc_comm_extension.rs  plc_communication_service.rs  range_register_repository.rs  range_value_calculator.rs  test_execution_engine.rs  test_orchestration_service.rs
FactoryTesting/src-tauri/src/domain/services/mocks/: mock_batch_allocation_service.rs  mock_channel_state_manager.rs  mock_event_publisher.rs  mock_persistence_service.rs  mock_plc_communication_service.rs  mock_test_execution_engine.rs  mock_test_orchestration_service.rs  mod.rs  test_data_generator.rs
FactoryTesting/src-tauri/src/infrastructure/: di_container.rs  mod.rs  plc_communication.rs  plc_communication_tests.rs  plc_compat.rs  range_register_repository.rs
FactoryTesting/src-tauri/src/infrastructure/extra/: mod.rs
FactoryTesting/src-tauri/src/infrastructure/extra/infrastructure/: event_publisher.rs  excel_export_service.rs  mock_plc_monitoring_service.rs  mod.rs  plc_monitoring_service.rs
FactoryTesting/src-tauri/src/infrastructure/extra/infrastructure/database/: mod.rs  persistence_service.rs
FactoryTesting/src-tauri/src/infrastructure/extra/infrastructure/excel/: excel_importer.rs  mod.rs
FactoryTesting/src-tauri/src/infrastructure/extra/infrastructure/persistence/: app_settings_service.rs  mod.rs  (+3 more)
FactoryTesting/src-tauri/src/interfaces/: mod.rs
FactoryTesting/src-tauri/src/interfaces/tauri/: mod.rs
FactoryTesting/src-tauri/src/interfaces/tauri/commands/: channel_range_setting.rs  data_management.rs  global_function_test_commands.rs  manual_test_commands.rs  manual_testing.rs  mod.rs  plc_connect.rs  test_plc_config.rs
FactoryTesting/src-tauri/src/logging/: DESIGN_SPECIFICATION.md  IMPLEMENTATION_SUMMARY.md  MACRO_USAGE_GUIDE.md  README_IMPLEMENTATION.md  advanced_file_writer.rs  cleanup_scheduler.rs  enterprise_logger.rs  file_manager.rs  global_logger_adapter.rs  logger_config.rs  logger_config_backup.rs  mod.rs  simple_logger.rs
FactoryTesting/src-tauri/src/models/: advanced_models.rs  enums.rs  mod.rs  structs.rs  test_plc_config.rs  tests.rs
FactoryTesting/src-tauri/src/models/entities/: channel_mapping_config.rs  channel_point_definition.rs  channel_point_definition_new.rs  channel_test_instance.rs  global_function_test_status.rs  mod.rs  plc_connection_config.rs  range_register.rs  raw_test_outcome.rs  test_batch_info.rs  test_plc_channel_config.rs
FactoryTesting/src-tauri/src/models/structs/: manual_test.rs
FactoryTesting/src-tauri/src/monitoring/: mod.rs  system_monitor.rs
FactoryTesting/src-tauri/src/services/: channel_allocation_service.rs  mod.rs  traits.rs
FactoryTesting/src-tauri/src/services/application/: batch_allocation_service.rs  data_import_service.rs  mod.rs  report_generation_service.rs  test_coordination_service.rs  test_orchestration_service.rs
FactoryTesting/src-tauri/src/services/domain/: channel_state_manager.rs  mod.rs  plc_connection_manager.rs  specific_test_executors.rs  test_execution_engine.rs  test_plc_config_service.rs
FactoryTesting/src-tauri/src/services/infrastructure/: event_publisher.rs  mock_plc_monitoring_service.rs  mod.rs  plc_monitoring_service.rs
FactoryTesting/src-tauri/src/services/infrastructure/database/: mock_database_service.rs  mod.rs  persistence_service.rs  tests.rs
FactoryTesting/src-tauri/src/services/infrastructure/excel/: excel_importer.rs
FactoryTesting/src-tauri/src/services/infrastructure/persistence/: app_settings_service.rs  json_persistence_service.rs  mod.rs  persistence_service.rs  sqlite_orm_persistence_service.rs  tests.rs
FactoryTesting/src-tauri/src/services/infrastructure/plc/: mock_plc_service.rs  mod.rs  modbus_plc_service.rs  plc_communication_service.rs  tests.rs
FactoryTesting/src-tauri/src/utils/: config.rs  error.rs  mod.rs  tests.rs  time_utils.rs
FactoryTesting/src-tauri/tests/: database_migration.rs  plc_communication_integration_test.rs
(+505 files in other folders)
