[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
# 只编译必需的crate类型以减少编译时间
crate-type = ["rlib"]

# 二进制配置
[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "create_db"
path = "src/bin/create_db.rs"

[[bin]]
name = "initialize_database_complete"
path = "src/bin/initialize_database_complete.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tauri = { version = "2.2.0", features = [] }
tauri-plugin-log = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tokio-util = "0.7"
tokio-modbus = "0.16.1"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
base64 = "0.22.0"
calamine = "0.22"

# 报告生成系统依赖
printpdf = "0.7"
tera = "1.19"
rust_xlsxwriter = { version = "0.88", features = ["chrono"] }

# 数据分析依赖
statrs = "0.16"

# 用户权限管理依赖
jsonwebtoken = "9.2"
bcrypt = "0.15"

# 配置管理依赖
config = "0.14"

# 随机数生成（用于Mock）
rand = "0.8"

# 全局状态管理
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"
tokio-test = "0.4"

# 编译优化配置
[profile.dev]
# 开发模式基础优化
opt-level = 1
debug = true
incremental = true
# 减少代码生成单元数量以加快链接
codegen-units = 16
# 关闭溢出检查以提高性能
overflow-checks = false

[profile.dev.package."*"]
# 依赖库使用更高优化级别
opt-level = 2
debug = false
